# inventory

./: .gitignore  AGENTS.md  AGENT_SUMMARY.md  DESIGN.json  DESIGN.md  PRODUCT.md  README.md  _tmp_grounding_assessment.json  pyproject.toml
.playwright-cli/: page-2026-07-10T12-30-13-118Z.yml  page-2026-07-10T12-30-46-472Z.yml  page-2026-07-10T12-32-20-486Z.yml  page-2026-07-10T12-33-33-130Z.yml  page-2026-07-12T18-55-06-143Z.yml  page-2026-07-12T18-55-11-490Z.yml  page-2026-07-12T18-55-18-404Z.yml  page-2026-07-12T18-55-23-986Z.yml  page-2026-07-12T18-55-54-519Z.yml  page-2026-07-12T18-56-07-118Z.yml  page-2026-07-12T18-57-14-585Z.yml  page-2026-07-12T18-57-20-713Z.yml
benchmarks/: audit_defects.py  audit_matches.py  cost_estimate.py  extract_inventoryflex.py  extract_weststand.py  ims_rubric_agreement.py  make_synthetic_checkout.py  probe_local.py  quality_gate.py
docs/: 00-north-star.md  01-scope-and-architecture.md  02-research.md  03-implementation-plan.md  04-backend-comparison.md  05-review-experience.md  06-professional-report-benchmark.md  07-own-property-run.md  08-compare.md  09-web-ui-and-capture.md  10-product-quality-review.md  11-video-segmentation.md  12-video-first-journey.md  13-frontend-craft.md  13-yoloe-detection.md  14-frontend-craft.md  15-curation-and-one-app.md  16-report-redesign.md  17-experience-redesign.md  18-hero-image-selection.md  19-ios-native-app.md  19-ml-dl-exploration-plan.md  20-ios-native-app.md  20-ml-dl-experiment-log.md  21-ml-dl-experiment-log.md  22-ml-programme-review-and-roadmap.md  23-gpu-rerun-runbook.md  24-first-tester-runbook.md  24-friction-log-2026-07-08.md  25-design-overhaul.md  26-capture-strategy-experiment.md  27-mobile-owner-pairing-friction-log-2026-07-10.md  28-camera-first-mobile-rebuild.md  29-evidential-spec-audit.md  29-local-inference-tuning.md  30-evidence-register-experience-pass.md  30-phase4-quality-gate.md  31-synthetic-evaluation-dataset-plan.md  README.md  market-research-2026-07.md
evals/: README.md  __init__.py  build_hero_candidate_manifest.py  ci_gate.py  defect_zeroshot.py  embed_head.py  eval_defect_pretrain.py  eval_defect_zeroshot.py  eval_describe_pool.py  eval_detect.py  eval_detect_gdino.py  eval_detect_oi_pretrain.py  eval_finetune_detect.py  eval_hero_cover.py  eval_iqa.py  eval_iqa_koniq.py  eval_mslap_cover.py  eval_pause_detect.py  eval_relevance_siglip.py  eval_room_classifier.py  eval_segformer_surface.py  eval_segment_embed.py  eval_segment_vlm_refine.py  eval_shot_scale.py  eval_siamese_compare.py  eval_vlm_rerank.py  export_onnx.py  gdino_detect.py  hero_gold.py  label_boxes.py  label_segments.py  ml_scorers.py  oi_detect.py  oi_vocab.py  run_eval.py  score_benchmarks.py  train_gdino_oi.py  (+5 more)
(+558 files in other folders)
