[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "homeinventory"
version = "0.1.0"
description = "AI property inventory & schedule-of-condition reports (TDS)"
requires-python = ">=3.10"
dependencies = [
    "pillow>=10",
    "pillow-heif>=0.16",
    "jinja2>=3.1",
]

[project.optional-dependencies]
# Open-source detection (YOLOE). Install CPU torch first to keep it lean:
#   pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
detect = ["ultralytics>=8.3", "opencv-python-headless>=4.9"]
# Claude vision describe backend
claude = ["anthropic>=0.40"]
# PDF output (HTML report works without it)
pdf = ["weasyprint>=61"]
all = ["homeinventory[detect,claude,pdf]"]
dev = ["pytest>=8"]

[project.scripts]
homeinventory = "homeinventory.cli:main"

[tool.setuptools.packages.find]
include = ["homeinventory*"]

[tool.setuptools.package-data]
homeinventory = ["templates/*.j2"]
