[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "homeinventory"
version = "0.1.0"
description = "AI property inventory & schedule-of-condition reports (TDS)"
requires-python = ">=3.10"
dependencies = [
    "pillow>=10",
    "pillow-heif>=0.16",
    "jinja2>=3.1",
]

[project.optional-dependencies]
# Open-source detection (YOLOE). ultralytics pulls the default torch build;
# swap in CUDA (or CPU) AFTER installing, see README quick start:
#   uv pip install --reinstall-package torch --reinstall-package torchvision \
#       torch torchvision --index-url https://download.pytorch.org/whl/cu128
detect = ["ultralytics>=8.3", "opencv-python-headless>=4.9"]
# Claude vision describe backend
claude = ["anthropic>=0.40"]
# PDF output (HTML report works without it)
pdf = ["weasyprint>=61"]
# ML/DL eval + GPU re-run stack (docs/22, docs/23). NOT a product dependency —
# used only by evals/. Install torch with the matching CUDA build separately:
#   uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu128
ml = [
    "torch>=2.2",
    "torchvision>=0.17",
    "open-clip-torch>=2.24",
    "timm>=1.0",
    "transformers>=4.44",
    "datasets>=2.20",
    "huggingface_hub>=0.24",
    "numpy>=1.26",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "fiftyone>=0.25",
    "sentencepiece>=0.2",
]
all = ["homeinventory[detect,claude,pdf]"]
dev = ["pytest>=8", "numpy>=1.26"]

[project.scripts]
homeinventory = "homeinventory.cli:main"

[tool.setuptools.packages.find]
include = ["homeinventory*"]

[tool.setuptools.package-data]
homeinventory = ["templates/*.j2"]
